--- a/nav-app/src/app/matrix/technique-cell/contextmenu/contextmenu.component.scss
+++ b/nav-app/src/app/matrix/technique-cell/contextmenu/contextmenu.component.scss
@@ -14,7 +14,6 @@
     }
     .menu {
         @include cell-popover(0.85);
-        min-width: 150px;
         .contextMenu-section {
             &:not(:first-child) {
                 border-top: 1px solid white;
