--- a/nav-app/src/app/matrix/technique-cell/tooltip/tooltip.component.scss
+++ b/nav-app/src/app/matrix/technique-cell/tooltip/tooltip.component.scss
@@ -3,12 +3,12 @@
 
 .tooltip {
     @include cell-popover(0.75);
-    width: 150px;
     table {
+        width: 100%;
         border-collapse: collapse;
         td {
             padding: 3px;
-            vertical-align: top;;
+            vertical-align: top;
         }
         tr:nth-child(2) td {
             border-top: 1px solid white;
